--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <canvas class="webGl"></canvas>
+    <canvas class="webgl"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
